--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "eslint": "node_modules/.bin/eslint"
   },
   "keywords": [
     "adonisjs",
@@ -26,6 +27,9 @@
     "@adonisjs/lucid": "^6.1.3",
     "pg": "^7.11.0"
   },
+  "autoload": {
+    "App": "./app"
+  },
   "devDependencies": {
     "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
@@ -33,8 +37,5 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0"
-  },
-  "autoload": {
-    "App": "./app"
   }
 }
