--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test",
-    "eslint": "node_modules/.bin/eslint"
+    "test": "node ace test"
   },
   "keywords": [
     "adonisjs",
@@ -25,17 +24,18 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "eslint-plugin-import": "^2.18.0",
     "pg": "^7.11.0"
-  },
-  "autoload": {
-    "App": "./app"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "autoload": {
+    "App": "./app"
   }
 }
