--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "node": true
   },
   "extends": ["standard"],
-  "plugins": ["import", "standard", "promise"],
+  "plugins": ["standard", "promise"],
   "globals": {
     "Atomics": "writable",
     "SharedArrayBuffer": "writable",
@@ -14,6 +14,5 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
-
   "rules": {}
 }
