Foi adicionado tratamento de exceção para tratar exceções em ambiente de desenvolvimento

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,9 @@
     "node": true
   },
   "extends": ["standard"],
-  "plugins": ["standard", "promise", "node"],
   "globals": {
-    "Atomics": "writable",
-    "SharedArrayBuffer": "writable",
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly",
     "use": true
   },
   "parserOptions": {
